hphp/test/zend/bad/ext/reflection/tests/ReflectionObject_export_basic1.php
<?php

class Foo  {
	public $bar = 1;
}
$f = new foo;

ReflectionObject::export($f);

?>
